tests/ui/type/cannot-find-wrapper-with-impl-trait.stderr
error[E0425]: cannot find type `Wrapper` in this scope
  --> $DIR/cannot-find-wrapper-with-impl-trait.rs:8:18
   |
LL | fn addition() -> Wrapper<impl A> {}
   |                  ^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
